--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,6 @@
     "ember-qunit": "0.3.0",
     "ember-qunit-notifications": "0.0.7",
     "qunit": "~1.17.1",
-    "picnic": "~3.3.1",
-    "moment": "~2.10.2"
-  }
+    "picnic": "~3.3.1"
+   }
 }
