--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.9",
     "ember-cli-uglify": "1.0.1",
+    "ember-computed-change-gate": "0.0.3",
     "ember-data": "1.0.0-beta.16.1",
-    "ember-export-application-global": "^1.0.2"
+    "ember-export-application-global": "^1.0.2",
+    "moment": "~2.10.2"
+  },
+  "dependencies": {
+    "ember-cli-fill-murray-pucho": "^0.1.3"
   }
 }
